plugins/position/MarksImporterPanel: Clean URL construction future deprecation.